--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>AFRL Test Data Monitor</title>
@@ -16,7 +16,10 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 		
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+	<!-- C3JS CSS -->
+	<link href="css/c3.css" rel="stylesheet" type="text/css" media="screen">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -32,7 +35,6 @@
 			<p id="time">10-26-2014, 13:45</p>
 		</div>
 		<div class="mainGraph">
-        	<p style="text-align:center;"><img src="img/graph-placeholder.jpg" width="999" height="577"></p>
 		</div>
 	<div class="navRow">
 			<div class="sectionLabel">Select</div>
@@ -52,24 +54,23 @@
 				<div class="buttonLabel">RESP</div>
 			</div>
 		</div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<!-- chart js -->
+	<script src="js/data/Trial2_FULL_Fast_5_Downsampled.json" type="text/javascript"></script>
+	<script src="js/data/Trial2-Update1.json" type="text/javascript"></script>
+	<script src="js/data/Trial2-Update2.json" type="text/javascript"></script>
+
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 	<script>
-			$(document).ready(function () {
-    			selectItem('1');
-			});
-		</script>
+		$(document).ready(function () {
+			selectItem('1');
+		});
+	</script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+	<!-- C3JS and D3JS Libraries -->
+	<script src="js/d3.min.js" type="text/javascript"></script>
+	<script src="js/c3.min.js" type="text/javascript"></script>
     </body>
 </html>
