Alerts, Axis Zooming, etc.
Added css for alert states (yellow and red alert levels). Started
adding zoom button GUI.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		</div>
 		<div class="mainGraph">
         	<p style="text-align:center;"><img src="img/graph-placeholder.jpg" width="999" height="577"></p>
+			<div class="axisLabels" id="xAxis"><img src="img/btn-zoom-minus.png"> Time (sec) <img src="img/btn-zoom-plus.png"></div>
 		</div>
 	<div class="navRow">
 			<div class="sectionLabel">Select</div>
