Updated project to show preview graph for VEOG from 1-10 downsampled data.

--- a/index.html
+++ b/index.html
@@ -40,25 +40,29 @@
 			<div class="sectionLabel">Select</div>
 			<div class="button" id="button1" onclick="selectItem('1');">
 				<div class="buttonLabel">EEG</div>
+				<div class="graph"></div>
 			</div>
 			<div class="button" id="button2" onclick="selectItem('2');">
 				<div class="buttonLabel">VEOG</div>
+				<div class="graph"></div>
 			</div>
 			<div class="button" id="button3" onclick="selectItem('3');">
 				<div class="buttonLabel">HEOG</div>
+				<div class="graph"></div>
 			</div>
 			<div class="button" id="button4" onclick="selectItem('4');">
 				<div class="buttonLabel">ECG</div>
+				<div class="graph"></div>
 			</div>
 			<div class="button" id="button5" onclick="selectItem('5');">
 				<div class="buttonLabel">RESP</div>
+				<div class="graph"></div>
 			</div>
 		</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<!-- chart js -->
-	<script src="js/data/Trial2_FULL_Fast_5_Downsampled.json" type="text/javascript"></script>
-	<script src="js/data/Trial2-Update1.json" type="text/javascript"></script>
-	<script src="js/data/Trial2-Update2.json" type="text/javascript"></script>
+	<script src="js/data/Trial2_FULL_Fast_1-3_5.json" type="text/javascript"></script>
+	<script src="js/data/Trial2_FULL_Fast_1-10_5.json" type="text/javascript"></script>
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
