Updated js to make fake live updates.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 		</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<!-- chart js -->
-	<script src="js/data/Trial2_FULL_Fast_1-3_5.json" type="text/javascript"></script>
-	<script src="js/data/Trial2_FULL_Fast_1-10_5.json" type="text/javascript"></script>
+	<script src="js/data/Sub2Trial2.json" type="text/javascript"></script>
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
